# codec-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: main.rs
src/codecs/: mod.rs
src/codecs/builtins/: aes.rs  append.rs  base64.rs  cat.rs  const.rs  drop.rs  escape.rs  hash.rs  hex.rs  mod.rs  repeat.rs  rsa.rs  sink.rs  system.rs  take.rs  url.rs  zlib.rs
src/codecs/meta/: mod.rs  usage.rs
src/executor/: commands.rs  executor.rs  mod.rs  parser.rs
src/utils/: mod.rs
