[package]
name = "codec-rust"
version = "0.1.0"
authors = ["alesiong <ypf7.10@hotmail.com>"]
edition = "2018"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pipe = "0.3.0"
base64 = "0.12.3"
hex = "0.4.2"
aes = "0.5.0"
block-modes = "0.6.1"
md-5 = "0.9.1"
sha2 = "0.9.1"
digest = "0.9.0"
percent-encoding = "2.1.0"
flate2 = "1.0.18"
snailquote = "0.3.0"
anyhow = "1.0.32"