[package]
name = "codec-rust"
version = "0.1.0"
authors = ["alesiong <ypf7.10@hotmail.com>"]
edition = "2018"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pipe = "0.3.0"
base64 = "0.12.3"
hex = "0.4.2"
aes = "0.7.4"
block-modes = "0.8.1"
md-5 = "0.9.1"
sha2 = "0.9.1"
digest = "0.9.0"
percent-encoding = "2.1.0"
flate2 = { version = "1.0.18", optional = true } # TODO: make it required if flate2 removes libc dep
snailquote = "0.3.0"
anyhow = "1.0.32"
sm4 = "0.4.0"
sm3 = "0.3.0"
once_cell = "1.8.0"
rsa = { version = "0.5.0", optional = true }
rand = { version = "0.8.4", optional = true }
sha-1 = "0.9.7"
tokio = { version = "1.10.0", features = ["process", "io-util", "rt", "macros"], optional = true }

[features]
default = ["libc"]
full = ["libc", "system"]
system = ["tokio"]
libc = ["flate2", "rsa", "rand"]