[package]
name = "codec-rust"
version = "0.1.0"
authors = ["alesiong <ypf7.10@hotmail.com>"]
edition = "2021"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pipe = "0.4.0"
base64 = "0.21.4"
hex = "0.4.2"
aes = "0.8.3"
cbc = { version = "0.1.2", features = ["std"] }
ecb = { version = "0.1.2", features = ["std"] }
md-5 = "0.10.6"
sha2 = { version = "0.10.7", features = ["oid"] }
digest = "0.10.7"
percent-encoding = "2.1.0"
flate2 = { version = "1.0.18", optional = true } # TODO: make it required if flate2 removes libc dep
snailquote = "0.3.0"
anyhow = "1.0.32"
sm4 = "0.5.1"
sm3 = "0.4.2"
once_cell = "1.8.0"
rsa = { version = "0.9.2", optional = true }
rand = { version = "0.8.4", optional = true }
sha-1 = { version = "0.10.1", features = ["oid"] }
tokio = { version = "1.32.0", features = ["process", "io-util", "rt", "macros"], optional = true }
enum_delegate = "0.2.0"

[features]
default = ["libc"]
full = ["libc", "system"]
system = ["tokio"]
libc = ["flate2", "rsa", "rand"]